--- a/src/components/CartWidget/CartWidget.scss
+++ b/src/components/CartWidget/CartWidget.scss
@@ -2,4 +2,12 @@
     font-size: 30px;
     color: white;
     cursor: pointer;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .3s;
+}
+
+.cart-widget-active {
+    visibility: visible;
+    opacity: 1;
 }
